--- a/history_index.html
+++ b/history_index.html
@@ -10,74 +10,121 @@
   <!--working on page header --->
   <header>
    <div class='header_box'>
-     <a href='#'><img src='https://cdn.nba.com/teams/uploads/sites/1610612761/2021/09/Toronto-Raptors.svg' class='rap_logo'></a>
+     <a href='index.html'><img src='https://cdn.nba.com/teams/uploads/sites/1610612761/2021/09/Toronto-Raptors.svg' class='rap_logo'></a>
      <nav>
        <ul>
-         <li><a href='#'>History</a></li>
-         <li><a href='#'>Past failures</a></li>
-         <li><a href='#'>Our success</a></li>
-         <li><a href='#'>The future</a></li>
+         <li><a href='history_index.html'>History</a></li>
+         <li><a href='history_index.html'>Past failures</a></li>
+         <li><a href='sucess_index.html'>Our success</a></li>
+         <li><a href='future_index.html'>The future</a></li>
        </ul>  
      </nav>  
    </div>  
   </header>  
-  <div>
-    <div class='content'>
-      <br>
-      <h1>History of the raptors</h1>
-    </div>  
+  <div class='content_box'>
+    <div class='content_title'>
+      <h1>History of the raptors and Past failures</h1>
+    </div>     
+    <!--Working on nav buttons to navigate the page better--->
+  <div class='nav_button'>
+<a id='history_button' href="#history">History</a>
+  </div>  
+    <div class='nav_button'>
+<a id='failure_button' href="#failure">Failure</a>.
+  </div>  
+</div>  
+<!--history portion of page--->
+<div id='history'>
+<h2>The History</h2>
+</div>  
+ <div>
 
-
-
+ </div>  
+<!--Failure portion of page--->
+<div id='failure'>
+ <h2>Failure</h2>
+</div>  
+ <div class='lebron_james'>
+   <img src='https://cdn.nba.com/manage/2020/10/20171201_lebron_james_iso-3-784x523.jpg' width='50%'>
+ </div>  
+<div>
+  <p>Lebron James, many argue he is the best player to ever touch a basketball, regardless if you see him as the best or not there is no doubt he is one of the best. In 2018, 2017, and 2016 the Toronto Raptors fell Lebron and his Cavaliers. 3 seasons in a row the Raptor's had nothing they could throw at Lebron to beat him, this led to great conflict within the team. After losing for the third time the Raptor's fired their head coach in search of a new beggining to find a way around this obsticle they couldn't seem to beat.</p>
+</div>   
+<div class='game_7'>
+  <img src='https://i.ytimg.com/vi/k44ep8fsvCQ/maxresdefault.jpg' width='50%'>
+</div>  
+<div class='game_7_caption'>
+  <p>The first time the raptors seemed like they had a real chance at the NBA title was in 2001 when Vince Carter one of the most famous raptor's was leading the team. They were versing the Philadelphia 76ers in game 7 with the serries tied at 3-3, and its a do or die game, winner moves on. After starting off a bit slow the raptor's were able to claw back into the game. It was neck and neck till the very end, with a few seconds remaining the raptors were down by 1 and had 1 last oppurtunity to score, any made shot would have been a win. The ball was in the hands of Carter, he took the shot, it rattled around the rim but did not go in... resulting in one of the most devistating losses in Toronto history.</p>
+</div>  
+<!--working on triva part with some interactive parts-->
+<div class='trivia_title'>
+  <h2>Trivia! Which team have the raptors <span>NEVER</span> lost a serries to in the playoffs</h2>
+</div> 
+<div class='trivia_content'>
+  <div class='flex'>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="https://content.sportslogos.net/logos/6/222/thumbs/22269212018.gif" style="width:300px;height:200px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>Wrong</h1> 
+      <p>The Raptors lost to Cleveland in 2016, 2017, and 2018</p> 
+    </div>
+  </div>
+</div>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="https://content.sportslogos.net/logos/6/219/thumbs/21956712016.gif"  style="width:300px;height:200px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>Wrong</h1> 
+      <p>The Raptors lost to washington in 2015 4-0</p> 
+    </div>
+  </div>
+</div>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="https://content.sportslogos.net/logos/6/235/thumbs/23531522020.gif" alt="Avatar" style="width:300px;height:200px;">
+    </div>
+    <div id='correct' class="flip-card-back">
+      <h1>Correct!</h1> 
+      <p>The Raptors beat Golden State 4-2 in 2019 bringing homw their first NBA title</p> 
+    </div>
+  </div>
+</div>
+</div>
+</div>   
  <footer>
    <div class="footer_container">
   	 	<div class="footer_row">
   	 		<div class="footer-col">
-  	 			<h4>Legal</h4>
+  	 			<h4>Tickets</h4>
   	 			<ul>
-  	 				<li><a href="#">Terms of Use</a></li>
-  	 				<li><a href="#">Privacy Policy</a></li>
-  	 				<li><a href="#">Your California Privacy Rights</a></li>
-  	 				<li><a href="#">Children's Online Privacy Policy</a></li>
-             <li><a href="#">Interest-Based Adsnterest-Based Ads</a></li>
-             <li><a href="#">About Nielsen Measurement</a></li>
-             <li><a href="#">Do Not Sell My Info</a></li>
+  	 				<li><a href="#">Single Game Tickets</a></li>
+  	 				<li><a href="#">Membership Central</a></li>
+  	 				<li><a href="#">Mobile ticketing</a></li>
+  	 				<li><a href="#">Account Manager</a></li>
   	 			</ul>
   	 		</div>
   	 		<div class="footer-col">
-  	 			<h4> Our Sites</h4>
+  	 			<h4> Schedule</h4>
   	 			<ul>
-  	 				<li><a href="#">Nat Geo Home</a></li>
-  	 				<li><a href="#">Attend a Live Event</a></li>
-  	 				<li><a href="#">Book a Trip</a></li>
-  	 				<li><a href="#">Buy Maps</a></li>
-  	 				<li><a href="#">Inspire Your Kids</a></li>
-            <li><a href="#">Shop Nat Geo</a></li>
-            <li><a href="#">Visit the D.C. Museum</a></li>
-            <li><a href="#">Watch TV</a></li>
-            <li><a href="#">Learn About Our Impact</a></li>
-            <li><a href="#">Support our Mission</a></li>
-            <li><a href="#">Nat Geo Partners
-</a></li>
-            <li><a href="#">Masthead</a></li>
-            <li><a href="#">Press Room
-</a></li>
-            <li><a href="#">Advertise With Us</a></li>
-            
+  	 				<li><a href="#">2021-22 Schedule</a></li>
   	 			</ul>
   	 		</div>
   	 		<div class="footer-col">
-  	 			<h4>Join us</h4>
+  	 			<h4>Team</h4>
   	 			<ul>
-  	 				<li><a href="#">Subscribe</a></li>
-  	 				<li><a href="#">Customer Service</a></li>
-  	 				<li><a href="#">Renew Subscription</a></li>
-  	 				<li><a href="#">Manage Your Subscription</a></li>
-            <li><a href="#">Work at Nat Geo</a></li>
-            <li><a href="#">Sign up for Our Newsletters
-</a></li>
-            <li><a href="#">Contribute to Protect the Planet</a></li>
-            <li><a href="#">Pitch a Story</a></li>
+  	 				<li><a href="#">Roster</a></li>
+  	 				<li><a href="#">Team leaders</a></li>
+  	 				<li><a href="#">Player Stats</a></li>
+  	 				<li><a href="#">Stats</a></li>
+            <li><a href="#">Standings</a></li>
+            <li><a href="#">Raptors Management</a></li>
+            <li><a href="#">Raptors 905</a></li>
   	 		  </ul>
   	 		</div>
   	 		<div class="footer-col">
