--- a/future_index.html
+++ b/future_index.html
@@ -18,7 +18,8 @@
          <li><a href='sucess_index.html'>Our success</a></li>
          <li><a href='future_index.html'>The future</a></li>
        </ul>  
-     </nav>  
+     </nav>   color: #B4975A;
+  background-color: #3f3f3f;
    </div>  
   </header>  
   <!--Working on the content, starting with 3 pics then explaining them--->
