--- a/history_index.html
+++ b/history_index.html
@@ -38,7 +38,10 @@
 <h2>The History</h2>
 </div>  
  <div>
-
+   <p>The Raptors joined the NBA in 1995 as an expansion team alongside the Western Conference’s Vancouver Grizzlies. The two expansion teams were the first NBA franchises based in Canada. (An earlier team, the Toronto Huskies, played in the Basketball Association of America—one of the forerunners of the NBA—during the 1946–47 season.) The Raptors finished in last place in their division in each of their first three seasons in the league. Toronto acquired its first superstar, guard-forward Vince Carter, in a 1998 draft-day trade. A five-time All-Star for Toronto, Carter helped the franchise reach its first playoff berth, during the 1999–2000 season.</p>
+ </div>  
+ <div>
+   
  </div>  
 <!--Failure portion of page--->
 <div id='failure'>
