--- a/future_index.html
+++ b/future_index.html
@@ -18,8 +18,7 @@
          <li><a href='sucess_index.html'>Our success</a></li>
          <li><a href='future_index.html'>The future</a></li>
        </ul>  
-     </nav>   color: #B4975A;
-  background-color: #3f3f3f;
+     </nav>  
    </div>  
   </header>  
   <!--Working on the content, starting with 3 pics then explaining them--->
@@ -40,13 +39,19 @@
   </div>
 </div>
 <div class='description'>
-  <ul>
-    <li><h4>Scottie Barnes(Far left)</h4><p>Scottie Barnes is a rookie out of Florida state. The Toronto Raptors drafted him with the fourth pick in the 2021 NBA draft. He quickly become a fan favourite becuase of his bright fun personality, and is eagerness to win. Plus from his first he preformed amazingly and is neck to neck with the other rookies for the rookie of the year award, meaning he is one of the top rookies in the NBA and is adjusing to pro basketball well. Looking at his potential, he is 6'9 meaning he is quite big and long giving him a lot of potential, plus he's so young at just 20 years old he has a ton of time to grow as a player. By the time he is 25 he should be an all star, and one of the top players in the league, and if he stays with Toronto we could build the team around him and have good championship potential </p></li>
-    <li><h4>Dalano Banton(For right)</h4><p>Dalano Banton is another rookie, he is out of Nebraska and was the 46th pick in the 2nd round of the 2021 draft. His stats might not look as impressive as some of the other college players but he has a lot of potential, he is only 22 years old so he has a lot of time to get better. He is pretty tall at 6'9 and he has a 6'10 wingspan meaning he's pretty long which gives him a lot of defensive potential. On top of that he was born in Toronto so playing for Toronto representing his city will surly motivate him to be the best player he can be, that plus his good work ethic should build a solid player in the coming years. He does not need to be a super star, but if he can be a solid overall player it will be a huge support to the raptors</p></li>
-    <li><h4>OG Anunoby(Middle)</h4><p>OG Anunoby was pick number 23 in the 2017 NBA draft, he went to college in Indiana. He is a bit older at 24 years old, but reccently he started to show a lot of development, he wasn't the best player before but in the last 2-3 seasons he has improved a lot, now is a pretty dependable player. He can shoot the 3, he can take the ball inside and socre, plus his defense is good. If he continues to develop the way he is he can be an all star level player, and he's middle age now, in the next 4-5 years when Scottie Barnes and Dalano Banton are a bit older and solid players, OG will be a bit passed his prime, but he will be experinced and seasoned, and he will be able to lead the team into the playoffs and to a championship with all his experince.</p></li>
-  </ul>  
-</div>  
- </div>
+  <div class="row">
+  <div class="column">
+       <h4>Scottie Barnes</h4><p>Scottie Barnes is a rookie out of Florida state. The Toronto Raptors drafted him with the fourth pick in the 2021 NBA draft. He quickly become a fan favourite becuase of his bright fun personality, and is eagerness to win. Plus from his first he preformed amazingly and is neck to neck with the other rookies for the rookie of the year award, meaning he is one of the top rookies in the NBA and is adjusing to pro basketball well. Looking at his potential, he is 6'9 meaning he is quite big and long giving him a lot of potential, plus he's so young at just 20 years old he has a ton of time to grow as a player. By the time he is 25 he should be an all star, and one of the top players in the league, and if he stays with Toronto we could build the team around him and have good championship potential </p>
+  </div>
+  <div class="column">
+          <h4>OG Anunoby</h4><p>OG Anunoby was pick number 23 in the 2017 NBA draft, he went to college in Indiana. He is a bit older at 24 years old, but reccently he started to show a lot of development, he wasn't the best player before but in the last 2-3 seasons he has improved a lot, now is a pretty dependable player. He can shoot the 3, he can take the ball inside and socre, plus his defense is good. If he continues to develop the way he is he can be an all star level player, and he's middle age now, in the next 4-5 years when Scottie Barnes and Dalano Banton are a bit older and solid players, OG will be a bit passed his prime, but he will be experinced and seasoned, and he will be able to lead the team into the playoffs and to a championship with all his experince.</p>
+        
+  </div>
+  <div class="column">
+      <h4>Dalano Banton</h4><p>Dalano Banton is another rookie, he is out of Nebraska and was the 46th pick in the 2nd round of the 2021 draft. His stats might not look as impressive as some of the other college players but he has a lot of potential, he is only 22 years old so he has a lot of time to get better. He is pretty tall at 6'9 and he has a 6'10 wingspan meaning he's pretty long which gives him a lot of defensive potential. On top of that he was born in Toronto so playing for Toronto representing his city will surly motivate him to be the best player he can be, that plus his good work ethic should build a solid player in the coming years. He does not need to be a super star, but if he can be a solid overall player it will be a huge support to the raptors</p>
+  </div>
+</div>
+ 
  <!--a flip card for Vanvleet--->
  <div class='box'>
 <h1 class='flip_title'>The current star</h1>
@@ -59,7 +64,7 @@
     </div>
     <div class="flip-card-back">
       <h1>Fred Vanvleet</h1> 
-      <p>Fred Vanvleet is one of the best if not the best players on the raptor's this season, he started off as an average player but in the last few seasons his development has been sensational and now he's in the race for becoming an all star. He is definitely one of the best player's in the league right now, and he is a great player to lead the raptors to another championship in the future. Being 27 he'll be an expericed vetrean by the time the current rookies are solid players </p> 
+      <p style='color:white'>Fred Vanvleet is one of the best if not the best players on the raptor's this season, he started off as an average player but in the last few seasons his development has been sensational and now he's in the race for becoming an all star. He is definitely one of the best player's in the league right now, and he is a great player to lead the raptors to another championship in the future. Being 27 he'll be an expericed vetrean by the time the current rookies are solid players </p> 
     </div>
   </div>
 </div>
