--- a/history_index.html
+++ b/history_index.html
@@ -14,7 +14,7 @@
      <nav>
        <ul>
          <li><a href='history_index.html'>History</a></li>
-         <li><a href='history_index.html'>Past failures</a></li>
+         <li><a href='#failure'>Past failures</a></li>
          <li><a href='sucess_index.html'>Our success</a></li>
          <li><a href='future_index.html'>The future</a></li>
        </ul>  
@@ -40,10 +40,11 @@
  <div>
    <p>The Raptors joined the NBA in 1995 as an expansion team alongside the Western Conference’s Vancouver Grizzlies. The two expansion teams were the first NBA franchises based in Canada. (An earlier team, the Toronto Huskies, played in the Basketball Association of America—one of the forerunners of the NBA—during the 1946–47 season.) The Raptors finished in last place in their division in each of their first three seasons in the league. Toronto acquired its first superstar, guard-forward Vince Carter, in a 1998 draft-day trade. A five-time All-Star for Toronto, Carter helped the franchise reach its first playoff berth, during the 1999–2000 season.</p>
  </div>  
- <div>
-   
+ <div class='first_game'>
+     <img src='https://assets.tvo.org/prod/s3fs-public/media-library/raptors1.jpg?fLr9aEYJGK_Ej.Y7MR9b6s1DbmRs6kw1' width='50%'>
  </div>  
 <!--Failure portion of page--->
+<div class='failure_box'>
 <div id='failure'>
  <h2>Failure</h2>
 </div>  
@@ -59,6 +60,7 @@
 <div class='game_7_caption'>
   <p>The first time the raptors seemed like they had a real chance at the NBA title was in 2001 when Vince Carter one of the most famous raptor's was leading the team. They were versing the Philadelphia 76ers in game 7 with the serries tied at 3-3, and its a do or die game, winner moves on. After starting off a bit slow the raptor's were able to claw back into the game. It was neck and neck till the very end, with a few seconds remaining the raptors were down by 1 and had 1 last oppurtunity to score, any made shot would have been a win. The ball was in the hands of Carter, he took the shot, it rattled around the rim but did not go in... resulting in one of the most devistating losses in Toronto history.</p>
 </div>  
+</div>
 <!--working on triva part with some interactive parts-->
 <div class='trivia_title'>
   <h2>Trivia! Which team have the raptors <span>NEVER</span> lost a serries to in the playoffs</h2>
@@ -99,7 +101,61 @@
   </div>
 </div>
 </div>
-</div>   
+</div>  
+<!--Table displaying past playoff records--->  
+<div class='playoff_title'>
+  <h2>Raptor's playoff record and stats from 2015-2020</h2>
+</div>
+<div class="table-box">
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Season</th>
+            <th>Record</th>
+            <th>Win/Loss</th>
+            <th>Round</th>
+            <th>Opponent</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>2019-2020</td>
+            <td>3-4</td>
+            <td>Loss</td>
+            <td>Semi-final</td>
+            <td>Boston Celtics</td>
+        </tr>
+        <tr>
+            <td>2018-2019</td>
+            <td>4-2</td>
+            <td>Win</td>
+            <td>Finals</td>
+            <td>Golden State Warriors</td>
+        </tr>
+        <tr>
+            <td>2017-2018</td>
+            <td>0-4</td>
+            <td>Loss</td>
+            <td>Conference Semi-Finals</td>
+            <td>Cleveland Cavaliers</td>
+        </tr>
+        <tr>
+            <td>2016-2017</td>
+            <td>0-4</td>
+            <td>Loss</td>
+            <td>Conference Semi-Finals</td>
+            <td>Cleveland Cavaliers</td>
+        </tr>
+        <tr>
+            <td>2015-2016</td>
+            <td>2-4</td>
+            <td>Loss</td>
+            <td>Semi-Finals</td>
+            <td>Cleveland Cavaliers</td>
+        </tr>
+        </tbody>
+    </table>
+</div>  
  <footer>
    <div class="footer_container">
   	 	<div class="footer_row">
