--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <a href='index.html'><img src='https://cdn.nba.com/teams/uploads/sites/1610612761/2021/09/Toronto-Raptors.svg' class='rap_logo'></a>
      <nav>
        <ul>
-         <li><a href='history_index.html'>History</a></li>
+         <li><a href='history_index.html/#failure"'>History</a></li>
          <li><a href='history_index.html'>Past failures</a></li>
          <li><a href='sucess_index.html'>Our success</a></li>
          <li><a href='future_index.html'>The future</a></li>
