--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <a href='index.html'><img src='https://cdn.nba.com/teams/uploads/sites/1610612761/2021/09/Toronto-Raptors.svg' class='rap_logo'></a>
      <nav>
        <ul>
-         <li><a href='history_index.html'>History</a></li>
+         <li><a href='history_index.html/#failure"'>History</a></li>
          <li><a href='history_index.html'>Past failures</a></li>
          <li><a href='sucess_index.html'>Our success</a></li>
          <li><a href='future_index.html'>The future</a></li>
@@ -99,35 +99,35 @@
   	 					<h4>Tickets</h4>
   	 			<ul>
   	 				<li><a href="https://www.nba.com/raptors/tickets/single">Single Game Tickets</a></li>
-  	 				<li><a href="#">Membership Central</a></li>
-  	 				<li><a href="#">Mobile ticketing</a></li>
-  	 				<li><a href="#">Account Manager</a></li>
+  	 				<li><a href="https://members.raptors.com/">Membership Central</a></li>
+  	 				<li><a href="https://www.nba.com/raptors/tickets/mobile-ticketing">Mobile ticketing</a></li>
+  	 				<li><a href="https://am.ticketmaster.com/raptors/">Account Manager</a></li>
   	 			</ul>
   	 		</div>
   	 		<div class="footer-col">
   	 			<h4> Schedule</h4>
   	 			<ul>
-  	 				<li><a href="#">2021-22 Schedule</a></li>
+  	 				<li><a href="https://www.nba.com/raptors/schedule">2021-22 Schedule</a></li>
   	 			</ul>
   	 		</div>
   	 		<div class="footer-col">
   	 			<h4>Team</h4>
   	 			<ul>
-  	 				<li><a href="#">Roster</a></li>
-  	 				<li><a href="#">Team leaders</a></li>
-  	 				<li><a href="#">Player Stats</a></li>
-  	 				<li><a href="#">Stats</a></li>
-            <li><a href="#">Standings</a></li>
-            <li><a href="#">Raptors Management</a></li>
-            <li><a href="#">Raptors 905</a></li>
+  	 				<li><a href="https://www.nba.com/raptors/roster">Roster</a></li>
+  	 				<li><a href="https://www.nba.com/raptors/leaders">Team leaders</a></li>
+  	 				<li><a href="https://www.nba.com/stats/players/">Player Stats</a></li>
+  	 				<li><a href="https://www.nba.com/stats/team/1610612761/">Stats</a></li>
+            <li><a href="https://www.nba.com/standings">Standings</a></li>
+            <li><a href="https://www.nba.com/raptors/team/raptors-management">Raptors Management</a></li>
+            <li><a href="https://raptors905.gleague.nba.com/">Raptors 905</a></li>
   	 		  </ul>
   	 		</div>
   	 		<div class="footer-col">
   	 			<h4>follow us</h4>
   	 			<div class="social-links">
-  	 				<a href="#"><i class="fab fa-facebook-f"></i></a>
-  	 				<a href="#"><i class="fab fa-twitter"></i></a>
-  	 				<a href="#"><i class="fab fa-instagram"></i></a>
+  	 				<a href="https://www.facebook.com/TorontoRaptors"><i class="fab fa-facebook-f"></i></a>
+  	 				<a href="https://twitter.com/raptors"><i class="fab fa-twitter"></i></a>
+  	 				<a href="https://www.instagram.com/raptors"><i class="fab fa-instagram"></i></a>
   	 			</div>
   	 		</div>
   	 	</div>
