--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--working on page header --->
   <header>
    <div class='header_box'>
-     <a href='index.html'><img src='https://cdn.nba.com/teams/uploads/sites/1610612761/2021/09/Toronto-Raptors.svg' class='rap_logo'></a>
+     <a href='index.html'><img src='Toronto_Raptors_logo.svg' class='rap_logo'></a>
      <nav>
        <ul>
          <li><a href='history_index.html'>History</a></li>
