--- a/history_index.html
+++ b/history_index.html
@@ -10,7 +10,7 @@
   <!--working on page header --->
   <header>
    <div class='header_box'>
-     <a href='index.html'><img src='https://cdn.nba.com/teams/uploads/sites/1610612761/2021/09/Toronto-Raptors.svg' class='rap_logo'></a>
+     <a href='index.html'><img src='Toronto_Raptors_logo.svg' class='rap_logo'></a>
      <nav>
        <ul>
          <li><a href='history_index.html'>History</a></li>
@@ -41,7 +41,7 @@
    <p>The Raptors joined the NBA in 1995 as an expansion team alongside the Western Conference’s Vancouver Grizzlies. The two expansion teams were the first NBA franchises based in Canada. (An earlier team, the Toronto Huskies, played in the Basketball Association of America—one of the forerunners of the NBA—during the 1946–47 season.) The Raptors finished in last place in their division in each of their first three seasons in the league. Toronto acquired its first superstar, guard-forward Vince Carter, in a 1998 draft-day trade. A five-time All-Star for Toronto, Carter helped the franchise reach its first playoff berth, during the 1999–2000 season.</p>
  </div>  
  <div class='first_game'>
-     <img src='https://assets.tvo.org/prod/s3fs-public/media-library/raptors1.jpg?fLr9aEYJGK_Ej.Y7MR9b6s1DbmRs6kw1' width='50%'>
+     <img src='raptors1.jpg' width='50%'>
  </div>  
 <!--Failure portion of page--->
 <div class='failure_box'>
@@ -49,13 +49,13 @@
  <h2>Failure</h2>
 </div>  
  <div class='lebron_james'>
-   <img src='https://cdn.nba.com/manage/2020/10/20171201_lebron_james_iso-3-784x523.jpg' width='50%'>
+   <img src='20171201_lebron_james_iso-3-784x523.jpg' width='50%'>
  </div>  
 <div>
   <p>Lebron James, many argue he is the best player to ever touch a basketball, regardless if you see him as the best or not there is no doubt he is one of the best. In 2018, 2017, and 2016 the Toronto Raptors fell Lebron and his Cavaliers. 3 seasons in a row the Raptor's had nothing they could throw at Lebron to beat him, this led to great conflict within the team. After losing for the third time the Raptor's fired their head coach in search of a new beggining to find a way around this obsticle they couldn't seem to beat.</p>
 </div>   
 <div class='game_7'>
-  <img src='https://i.ytimg.com/vi/k44ep8fsvCQ/maxresdefault.jpg' width='50%'>
+  <img src='vince_carter.jpg' width='50%'>
 </div>  
 <div class='game_7_caption'>
   <p>The first time the raptors seemed like they had a real chance at the NBA title was in 2001 when Vince Carter one of the most famous raptor's was leading the team. They were versing the Philadelphia 76ers in game 7 with the serries tied at 3-3, and its a do or die game, winner moves on. After starting off a bit slow the raptor's were able to claw back into the game. It was neck and neck till the very end, with a few seconds remaining the raptors were down by 1 and had 1 last oppurtunity to score, any made shot would have been a win. The ball was in the hands of Carter, he took the shot, it rattled around the rim but did not go in... resulting in one of the most devistating losses in Toronto history.</p>
@@ -70,7 +70,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="https://content.sportslogos.net/logos/6/222/thumbs/22269212018.gif" style="width:300px;height:200px;">
+      <img src="cleveland_logo.gif" style="width:300px;height:200px;">
     </div>
     <div class="flip-card-back">
       <h1>Wrong</h1> 
@@ -81,7 +81,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="https://content.sportslogos.net/logos/6/219/thumbs/21956712016.gif"  style="width:300px;height:200px;">
+      <img src="washington_logo.gif"  style="width:300px;height:200px;">
     </div>
     <div class="flip-card-back">
       <h1>Wrong</h1> 
@@ -92,7 +92,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="https://content.sportslogos.net/logos/6/235/thumbs/23531522020.gif" alt="Avatar" style="width:300px;height:200px;">
+      <img src="golden_state_logo.gif" alt="Avatar" style="width:300px;height:200px;">
     </div>
     <div id='correct' class="flip-card-back">
       <h1>Correct!</h1> 
