--- a/history_index.html
+++ b/history_index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--Brevan-->
+<!--This page is about the histoy and failure of the Raptors. I have both the history and failure topics on this page, so at the top I put anchor links to navigate the page easier-->
+<!--January 25th 2022 -->
+<!--TEJ20-->
 <html>
 <head>
   <title>Basic Web Page</title>
