--- a/sucess_index.html
+++ b/sucess_index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--Brevan-->
+<!--This page is about the success of the Raptos. It goes over what happened and some of the key elements that lead up to the Raptors winning the championship-->
+<!--January 25th 2022 -->
+<!--TEJ20-->
 <html>
 <head>
   <title>Basic Web Page</title>
