--- a/future_index.html
+++ b/future_index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--Brevan-->
+<!--This page is about the future of the Raptors and some of the potential stars who could lead the Raptors in the future -->
+<!--January 25th 2022 -->
+<!--TEJ20-->
 <html>
 <head>
   <title>Basic Web Page</title>
