--- a/history_index.html
+++ b/history_index.html
@@ -34,7 +34,7 @@
 <a id='history_button' href="#history">History</a>
   </div>  
     <div class='nav_button'>
-<a id='failure_button' href="#failure">Failure</a>.
+<a id='failure_button' href="#failure">Failure</a>
   </div>  
 </div>  
 <!--history portion of page--->
