--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
  </div> 
   </div>
 </div> 
-<!--working on flip card--->
+<!--working on flip card, which I learned how to do on W3 schools--->
 <div class='flip_box'>
 <h1 class='flip_title'>Toronto's superfan</h1>
 <h3 class='flip_caption'>(hover over the image below)</h3>
@@ -61,7 +61,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="nav_bhatia.jpeg" alt="Avatar" style="width:300px;height:300px;">
+      <img src="nav_bhatia.jpeg" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
       <h1>Nav Bhatia</h1> 
