--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
    <a href='https://raptors.app.link/LnGWLomL6jb?_p=c11035dc990066eeea1490fce0'><img class="image_with_text" data-mptype="image" width="100%" src="Game-Time-Season-2-Narrow@3x.webp">
    </a>
  </div>
+  <!--working on the footer for the page. I took the skeleton for this footer from my imitation website, and I changed it to suit the needs of this page--->
  <footer>
    <div class="footer_container">
   	 	<div class="footer_row">
