--- a/history_index.html
+++ b/history_index.html
@@ -27,7 +27,7 @@
   </header>  
   <div class='content_box'>
     <div class='content_title'>
-      <h1>History of the Raptors and Past failures</h1>
+      <h1>History of the Raptors and Past Failures</h1>
     </div>     
     <!--Working on nav buttons to navigate the page better--->
   <div class='nav_button'>
